--- a/static/airstyle.css
+++ b/static/airstyle.css
@@ -1,41 +1,263 @@
-html {
-    font-family: "Helvetica", sans-serif;
-    font-size: 16px;
-    color: #ccc;
-    background-color: rgb(90, 142, 145);
-}
-a {
-    color: rgb(228, 234, 237);
-    font-size: 12px;
-}
-h1, h2, h3, h4 {
-    color: #bad4d5;
-    background-color: rgb(51, 115, 120);
-    border: 1px solid rgb(167, 216, 224);
-    border-bottom: 4px solid rgb(186, 206, 226);
-    padding: 8px 12px;
-}
-.header {
-    background-color: #02554a;
+html{
     margin: 0;
-    padding-top: 0;
-}
-hr {
-    border: none;
-    border-bottom: 2px solid rgba(127, 127, 127, 0.5);
+    padding: 0;
 }
 
-.doors {
+.main{
     width: 100%;
-    max-width: 700px;
-    height: 500px;
-    background-image: url('doors.jpg');
+    background: linear-gradient(to top, rgba(0,0,0,0.5)50%,rgba(0,0,0,0.5)50%), url('life.jpg');
+    background-position: center;
     background-size: cover;
-    background-position: center;
-    background-position: center;
-    margin: 0 auto;
+    height: 109vh;
 }
-.tube{
+
+.navbar{
+    width: 1200px;
+    height: 75px;
+    margin: auto;
+}
+
+.icon{
+    width: 200px;
+    float: left;
+    height: 70px;
+}
+
+.logo{
+    color: #264d00;
+    font-size: 35px;
+    font-family: Arial;
+    padding-left: 20px;
+    float: left;
+    padding-top: 20px;
+}
+
+.menu{
+    width: 400px;
+    float: left;
+    height: 70px;
+}
+
+ul{
+   float: left;
+   display: flex;
+   justify-content: center;
+   align-items: center; 
+}
+
+ul li{
+    list-style: none;
+    margin-left: 62px;
+    margin-top: 45px;
+    font-size: 14px;
+}
+
+ul li a{
+    text-decoration: none;
+    color: wheat;
+    font-family: Arial;
+    font-weight: bold;
+    transition: 0.4 ease-in-out;
+}
+
+ul li a:hover {
+    color: #264d00;
+}
+
+.search{
+    width: 330px;
+    float: left;
+    margin-left: 270px;
+}
+
+.srch{
+    font-family: 'Times New Roman';
+    width: 200px;
+    height: 40px;
+    background: transparent;
+    border: 1px solid #264d00;
+    margin-top: 13px;
+    color: antiquewhite;
+    border-right: none;
+    font-size: 16px;
+    float: left;
+    padding: 10px;
+    border-bottom-left-radius: 5px;
+    border-top-left-radius: 5px;
+    
+}
+
+.btn{
+    width: 100px;
+    height: 40px;
+    background: #264d00;
+    border: 2px solid #264d00;
+    margin-top: 13px;
+    color: antiquewhite;
+    font-size: 15px;
+    border-bottom-right-radius: 5px;
+    border-top-right-radius: 5px;
+} 
+
+.btn:focus{
+    outline: none;
+}
+
+.srch:focus{
+    outline: none;
+}
+
+.content{
+    width: 1200px;
+    height: auto;
+    margin: auto;
+    color: antiquewhite;
+    position: relative;
+}
+
+.content .par{
+    padding-left: 20px;
+    padding-bottom: 25px;
+    font-family: Arial;
+    letter-spacing: 1.1px;
+    line-height: 30px;
+}
+
+.content h1{
+    font-family: 'Times New Roman';
+    font-size: 50px;
+    padding-left: 20px;
+    margin-top: 7%;
+    letter-spacing: 2px;
+    
+}
+.content strong{
+    font-family: 'Times New Roman';
+    font-size: 40px;
+    letter-spacing: 2px;
+    padding-left: 5px;
+    color: #264d00;
+}
+
+ .content .cn{
+    width: 160px;
+    height: 40px;
+    background: #264d00;
+    border: none;
+    margin-bottom: 10px;
+    margin-left: 20px;
+    font-size: 18px;
+    border-radius: 10px;
+    cursor: pointer;  
+    transition: .4s ease;
+ }
+
+ .content .cn a{
+    text-decoration: none;
+    color: black;
+    transition: .3s ease;
+ }
+
+.cn:hover{
+    background-color: antiquewhite;
+}
+
+.content span{
+    color: #264d00;
+    font-size: 60px initial;
+}
+
+.form{
+    width: 250px;
+    height: 300px;
+    background: linear-gradient(to top, rgba(0,0,0,0.5)50%, rgba(0,0,0,0.5)50%);
+    position: absolute;
+    top: -20%;
+    left: 870px;
+    border-radius: 10px;
+    padding: 25px;
+}
+
+.form h2{
+    width: 220px;
+    font-family: sans-serif;
+    text-align: center;
+    color: #264d00;
+    font-size: 22px;
+    background-color: wheat;
+    border-radius: 10px;
+    margin: 2px;
+    padding: 8px;
+}
+
+.form input{
+    width: 240px;
+    height: 35px;
+    background: transparent;
+    border-bottom: 1px solid #264d00;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    color: antiquewhite;
+    font-size: 12px;
+    letter-spacing: 1px;
+    margin-top: 30px;
+    font-family: sans-serif;
+}
+
+.form input:focus{
+    outline: none;
+}
+
+::placeholder{
+    color: antiquewhite;
+    font-family: 'Arial';
+}
+
+.btn2{
+    width: 240px;
+    height: 40px;
+    background: #264d00;
+    border: none;
+    margin-top: 15px;
+    font-size: 18px;
+    border-radius: 10px;
+    cursor: pointer;
+    color: antiquewhite;
+    transition: 0.4s ease;
+}
+
+.btn2:hover{
+    background: antiquewhite;
+    color: #264d00;
+}
+
+.btn2 a{
+    text-decoration: none;
+    color: black;
+}
+
+.form .link{
+    font-family: 'Arial';
+    font-size: 10px;
+    padding-top: 0px;
+    text-align: center;
+    color: wheat;
+}
+
+.form .sing{
+    font-size: 17px;
+    text-decoration: none;
     text-align: center;
 }
 
+.form .sing a{
+    text-decoration: none;
+    font-family: Arial;
+    color: antiquewhite;
+}
+
+.form .sing a:hover{
+    font-style: bold;
+    color: #264d00;
+}
