--- a/templates/airida.html
+++ b/templates/airida.html
@@ -1,28 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Studentė</title>
-    <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
-    <link href="/static/airstyle.css" rel="stylesheet" type="text/css">
+<head>
+    <title>Airida Laba_Diena Web Designe</title>
+    <link rel="stylesheet" href="/static/airstyle.css">
 </head>
 <body>
-    <div class="header">
-        <h1>Studentė</h1>
-        <h2>airidalabas</h2>
+    <div class="main">
+        <div class="navbar">
+            <div class="icon">
+                <h2 class="logo">Training Session</h2>
+            </div>
+
+            <div class="menu">
+                <ul>
+                    <li><a href="/video/">VIDEO</a></li>
+                    <li><a href="#">TABLE</a></li>
+                    <li><a href="#">HOME</a></li>
+                    <li><a href="#">ABOUT</a></li>
+                    <li><a href="#">DESIGN</a></li>
+                </ul>
+            </div>
+
+            <div class="search">
+                <input class="srch" type="search" name="" placeholder="Type Your text">
+                <a href="#"> <button class="btn">Search</button></a>
+            </div>
+        </div>
+        <div class="content">
+            <h1>Web Design & <br>Development<br><span><i>by</span></i> AiridaLabas</h1>
+            <p class="par"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore<br> et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut<br> aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum<br> dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            
+            <button class="cn"><a href="#">JOIN</a></button>
+
+            <div class="form">
+                <h2>Login Here</h2>
+                <input type="email" name="email" placeholder="Enter Email Here">
+                <input type="password" name="password" placeholder="Enter Password Here">
+                <button class="btn2"> <a href="#">Login</a></button>
+
+                <p class="link">Don't have an account</p>
+                <p  class="sing"> <a href="#">Sing up here</a></p>
+            </div>
+        </div>
     </div>
-    <div class="text">
-        <p>Kodėl "labas", nes kiekviena diena tarsi naujiena, visada kuo nors nustebina, kartais tiesiog užtenka praverti <strong>DURIS</strong>..:)</p>
-    </div>
-    <div class="doors">
-    </div>
-    <div class="tube">
-        <p>O kai durys atsidaro!</p>
-        <iframe width="500" height="300" src="https://youtu.be/1g7TrcIlpMk" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-    </div>
-    <a href="/">atgal į PTU8 grupės puslapį</a>
 </body>
+    
 </body>
 </html>
